# persist-ai

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
NewProjectIdea2/: .env.example  .gitignore
NewProjectIdea2/docs/: DATASETS.md
NewProjectIdea2/scripts/: 04_run_baselines.py  05_run_lumen.py  06_eval_all.py  08_make_results_tables.py  download_mot17.ps1  eval_acdc_weather.py  ingest_youtube_scenes.py
NewProjectIdea2/tests/: test_latent_fsm.py  test_persist_occlusion.py
configs/: default.yaml  eval.yaml  interactive_scenes.json  lumen.yaml
data/cache/: video4_people_bikes_dets.json  video6_static_street_dets.json
data/manifests/: hero_clips.json
demo/viewer/: index.html  style.css  viewer.js
docs/: BASELINES.md  FAILURE_CASES.md  LINKEDIN_LAUNCH.md  METRICS.md
lumen/: __init__.py  __main__.py  brand.py  cli.py  types.py
lumen/core/: exit_zone.py  (+4 more)
notebooks/: 01_eda_bdd_occlusion.ipynb  02_error_analysis.ipynb  03_weather_ablation.ipynb
scripts/: 01_download_bdd.ps1  02_convert_occluroads.py  03_filter_bdd_occlusion_clips.py  07_make_demo_videos.py  build_both_demos.py  build_concept_demo.py  build_linkedin_assets.py  build_real_demo.py  build_street_demo.py  build_vehicle_demo.py  create_synthetic_demo.py  download_driving_sample.py  download_real_data.py  ingest_youtube_scenes.py  rebrand_persist.py  run_interactive_demo.py  validate_interactive_scenes.py
tests/: test_demo_overhaul.py  test_exit_zone.py  test_interactive_api.py  test_metrics_tcuo.py  test_persist_occlusion.py  test_reid_gate.py  test_selectable_target.py
(+49 files in other folders)
