[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persist-ai"
version = "0.1.0"
description = "PERSIST-AI: Object Permanence for Autonomous Perception"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "ultralytics>=8.2.0",
  "opencv-python>=4.8.0",
  "numpy>=1.24.0",
  "scipy>=1.11.0",
  "pandas>=2.0.0",
  "pyyaml>=6.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "motmetrics>=1.4.0",
  "lap>=0.4.0",
  "filterpy>=1.4.5",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "tqdm>=4.66.0",
  "pillow>=10.0.0",
  "torch>=2.1.0",
  "torchvision>=0.16.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1.0"]
occluroads = ["xmltodict>=0.13.0"]
boxmot = ["boxmot[yolo]>=11.0.0"]

[project.scripts]
persist-ai = "lumen.cli:app"
lumen = "lumen.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["lumen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
